syntax = "proto3";
package plmn;
option go_package = "github.com/nujikazo/plmn-list/api/proto";

import "google/api/annotations.proto";

service PlmnService {
  rpc ListPlmn (ListPlmnRequest) returns (ListPlmnsResponses) {
    option (google.api.http) = {
      get: "/v1/plmn"
	};
  }
}

message ListPlmnRequest {
  string mcc = 1;
  string mnc = 2;
  string brand = 3;
  string operator = 4;
  string status = 5;
  string bands = 6;
}

message Plmn {
  string mcc = 1;
  string mnc = 2;
  string brand = 3;
  string operator = 4;
  string status = 5;
  string bands = 6;
}

message ListPlmnsResponses {
    repeated Plmn plmn = 1;
}
